--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
   },
   "dependencies": {
     "@antv/dom-util": "2.0.2",
-    "@antv/matrix-util": "2.0.7",
     "@antv/g-canvas": "^0.4.12",
     "@antv/g6": "3.5.2",
+    "@antv/matrix-util": "2.0.7",
     "@antv/util": "~2.0.9",
+    "axios": "^0.21.1",
     "element-ui": "2.12.0",
     "vue": "^2.6.10"
   },
